--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,8 @@
 
   @media screen and(max-width: 650px ){
       font-size: 25px;
+      padding-left: 5px;
+      padding-right: 5px;
       
 
       }
@@ -84,19 +86,20 @@
     text-decoration: none;
     padding: 14px 28px;
     font-size: 16px;
-    border-radius: 0;
+  
     font-weight: 500;
     cursor: pointer;
     text-align: center;
     letter-spacing: 2px;
     color: white;
+    text-decoration: none;
     
 
     &:hover{
         transform: scale(1.1);
-        background-color: transparent;
-        border: 2px solid green;
-        color: green !important;
+        background-color: green;
+        border: 1px solid white;
+        color: rgb(197, 255, 197);
         transition: .4s;
         cursor: pointer;
     }
@@ -104,10 +107,6 @@
     a{
         color: white;
         text-decoration: none;
-
-        &:hover{
-          color: green;
-      }
       }
 
     
@@ -213,7 +212,7 @@
 
 
   .orders-img-cont{
-      border-radius: 15px;
+      border-radius: 6px;
       overflow: hidden;
   }
   
@@ -233,8 +232,12 @@
       height: auto;
       width: 452px;
       max-width: 100%;
-      border-radius: 15px;
+      border-radius: 6px;
       transform: scale(1);
+
+      @media screen and(max-width: 450px ){
+        border-radius: 3px;
+    }
 
       
 
@@ -301,6 +304,9 @@
               line-height: 30px;
               letter-spacing: 1px;
             }
+          @media screen and(max-width: 540px ){
+              font-size: 16px;
+            }
 
             
       }
@@ -363,4 +369,12 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+a{
+  text-decoration: none;
+
+//   &:hover{
+//     color: rgb(197, 255, 197);
+// }
 }
