--- a/src/container/Home/Header/Header.scss
+++ b/src/container/Home/Header/Header.scss
@@ -21,8 +21,8 @@
         transform: translateY(-50%, -50%);
     }
     
-    .here-1{
-        font-family: var(--font-base);
+    .hero-1{
+        font-family: var(--font-subheading);
         font-size: 60px;
         font-weight: 300;
         color: var(--primary);
@@ -44,7 +44,7 @@
 
 
 
-    .here-2{
+    .hero-2{
         font-size: 80px;
         font-weight: bold;
         font-family: var(--font-heading);
@@ -68,7 +68,7 @@
 
     }
 
-    .here-3{
+    .hero-3{
         font-size: 20px;
         font-weight: 400;
         font-family: var(--font-primary);
